# right_msckf

./: CMakeLists.txt  LICENSE.txt  README.md
docs/sympy_derivations/: transition_matrix_analysis.py
executables/: main.cpp  run_sim.cpp
src/: b3_spline.cpp  b3_spline.h  core.cpp  core.h  hamiltonian_msckf.cpp  hamiltonian_msckf.h  quat_ops.h  vio_sim.cpp  vio_sim.h  vio_simulator.cpp  vio_simulator.h
sympy_derivations/: common_ops.py  skew_identities.py
